compiler/testData/cli/jvm/diagnosticTests/forbidKotlinPackageK1.out
compiler/testData/cli/jvm/diagnosticTests/forbidKotlinPackage.kt:4:1: error: only the Kotlin standard library is allowed to use the 'kotlin' package
package kotlin.internal
^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
